jose.css
/* ... */
.column-1 {
    float: left;
    padding-left: 300px;
}

.column-2 {
    float: right;
    padding-right: 300px;
}

.skills-heading-1 {
    /* Allows the background color to size according to the content */
    text-align: center;
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    /* Light Gray-White */
    margin: 0 auto;
    max-width: 100%;
    color: #a6bcd3;
    font-size: 20px;
    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
    letter-spacing: 4px;
}

.contact-button-about {
    position: absolute;
    font-size: 20px;
    background-color: #36eee3;
    border-radius: 25px;
    font-family: 'Open Sans', sans-serif;
    transform: translate(-50%, -50%);
    top: 90%;
    left: 15.2%;
    font-weight: bold;
    border: none;
    /* Removes the border */
    display: block;
    /* Allows centering with margin */
    height: 50px;
    /* Ensures button size matches content */
    margin: 0px 45;
    padding-top: 0px;
    /* Centers the button horizontally */
    color: #001328;
    letter-spacing: 3px;
    transition: background-color 0.75s ease, transform 0.5s ease;
    width: 250px;

}

.contact-button-about:hover {
    position: absolute;
    font-size: 20px;
    background-color: #001328;
    border-radius: 20px;
    font-family: 'Open Sans', sans-serif;
    letter-spacing: 3px;
    transform: translate(-50%, -50%);
    color: #36eee3;
    top: 90%;
    left: 15.2%;
    font-weight: bold;
    border: none;
    /* Removes the border */
    display: block;
    /* Allows centering with margin */
    /* Ensures button size matches content */
    margin: 0px 45;
    padding-top: 0px;
    /* Increases inner spacing */
    width: 250px;
    /* Sets a fixed width */
    height: 50px;
}

.work-experience-section {
    width: 100vw;
    height: auto;
    place-items: center;
}

.job-experience-heading {
    /* Offset the heading by 50% of its own width and height */
    /* Remove any default margin */
    padding-top: 2.54cm;
    font-family: 'Inter', sans-serif;
    font-size: 26px;
    color: #000000;
    letter-spacing: 4px;
    justify-content: center;
    font-weight: bolder;
}

.job-experience-heading-2 {
    /* Offset the heading by 50% of its own width and height */
    /* Remove any default margin */
    font-family: 'Inter', sans-serif;
    font-size: 42px;
    color: #000000;
    letter-spacing: 1px;
    justify-content: center;
    font-weight: bolder;
    text-align: center;


}

.job-experience-p {
    color: #828c95;
    font-size: x-large;
    font-weight: lighter;
    text-align: center;
}

.education-section {
    display: flex;
    position: relative;
    /* Column line */
    column-gap: 0px;
    /* Space between columns */
    width: 70%;
    /* Full width of the container */
    padding: 0px;
    height: auto;
}

.column-1-education {
    width: 38.5%;
    padding-top: 5%;
    padding-bottom: 1%;
    padding-left: 8%;
    padding-right: 5%;
}

.column-2-education {
    width: 61.5%;
    padding: 5%;
}

.vertical-line-education {
    position: absolute;
    top: 0;
    left: 38.5%;
    /* Position the vertical line between the two columns */
    height: 95%;
    width: 1.5px;
    top: 5%;
    /* Line color */
    background-color: #a6bcd3;
    padding-bottom: 0%;
}

.column-1-education-headings {
    position: relative;
    font-size: 26px;
    font-style: 'Inter', sans-serif;
    letter-spacing: 1px;
    font-weight: bold;
    justify-content: right;
    text-align: right;
    color: #010407;
}

.column-1-education-sub-headings {
    position: relative;
    padding-left: 7.85%;
    letter-spacing: 1px;
    font-size: larger;
    font-style: 'Inter', sans-serif;
    font-weight: lighter;
    justify-content: right;
    color: #828c95;
    padding-bottom: 66.5%;
    text-align: right;
}

.column-2-education-headings {
    position: relative;
    font-size: 26px;
    display: inline;
    justify-content: left;
    /* Horizontal centering */
    align-items: left;
    text-align: left;
    font-style: 'Inter', sans-serif;
    letter-spacing: 1px;
    font-weight: bold;
    color: #000000;
    background-color: #36eee3;
    padding-top: 0cm;
    margin-bottom: 0.42cm;
    border-radius: 10px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 3px;
    padding-top: 3px;
}

.column-2-education-sub-headings {
    position: relative;
    letter-spacing: 1px;
    font-size: larger;
    font-style: 'Inter', sans-serif;
    font-weight: lighter;
    justify-content: left;
    color: #828c95;
    padding-bottom: 12.1%;
    line-height: 1.8;
    margin-top: 0.42cm;
}


/*3498db*/

.circle {
    width: 15px;
    /* size of the circle */
    height: 15px;
    /* size of the circle */
    background-color: #00f5d0;
    /* color of the circle */
    border-radius: 50%;
    /* makes the shape a circle */
    left: 38%;
    position: absolute;
    z-index: 10;
    margin-top: -20px;
}

.column-1-work-headings {
    position: relative;
    font-size: 26px;
    font-style: 'Inter', sans-serif;
    letter-spacing: 1px;
    font-weight: bold;
    justify-content: right;
    text-align: right;
    margin-left: -20.85%;
}


/**/

.column-1-work-sub-headings {
    position: relative;
    padding-left: 7.85%;
    letter-spacing: 1px;
    font-size: larger;
    font-style: 'Inter', sans-serif;
    font-weight: lighter;
    justify-content: right;
    color: #828c95;
    padding-bottom: 71%;
    text-align: right;
}


/*#f06000*/

.column-2-work-headings {
    position: relative;
    font-size: 26px;
    justify-content: left;
    display: inline;
    /* Horizontal centering */
    align-items: left;
    text-align: left;
    font-style: 'Inter', sans-serif;
    letter-spacing: 1px;
    font-weight: bold;
    color: #000000;
    background-color: #36eee3;
    padding-left: 0px;
    margin-top: 10cm;
    border-radius: 10px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 3px;
    padding-top: 3px;
}
/* ... */

